--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,88 @@
+html,
+body,
+#root {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    box-sizing: border-box;
+}
+
+body,
+button,
+dd,
+dl,
+dt,
+fieldset,
+form,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+input,
+legend,
+li,
+ol,
+p,
+select,
+table,
+td,
+textarea,
+th,
+ul {
+    margin: 0;
+    padding: 0;
+}
+
+body,
+button,
+input,
+select,
+table,
+textarea {
+    font-size: 16px;
+    line-height: 19px;
+    color: #303038;
+    font-family: -apple-system, BlinkMacSystemFont, 'Helvetica Neue',
+        'Apple SD Gothic Neo', Arial, sans-serif;
+}
+
 .App {
-  text-align: center;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    overflow: hidden;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+#wrap {
+    overflow: hidden;
+    width: 100%;
+    height: 100%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+#container {
+    overflow: hidden;
+    position: relative;
+    width: 100%;
+    height: 100%;
+    max-width: 1280px;
+    margin: 0 auto;
+    letter-spacing: -0.2px;
+    display: flex;
+    background-color: #f2f1f6;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.column_left {
+    display: flex;
+    flex: none;
+    width: 35%;
+    overflow: hidden;
+    border-right: 1px solid #dcdbe0;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.column_right {
+    display: flex;
+    flex: 1;
+    overflow: hidden;
 }
